--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: ivim's blog
 email: admin@ivim.vip
 description: >
   admin@ivim.vip's blog with GitHub.
-baseurl: "/xxx"
+baseurl: "/"
 url: "http://www.ivim.vip"
 twitter_username: 
 github_username:  jinzhisu
